# ponika

./: Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
examples/: config.py
examples/backup/: delete.py  download.py  download_to_file.py  generate.py  get.py
examples/data_usage/: simcard_usage.py
examples/dhcp_server/: ipv4_server_create.py  ipv4_server_dynamicleases.py  ipv4_server_get.py  ipv4_server_list.py  ipv4_server_status.py  ipv4_server_update.py  ipv6_server_dynamicleases.py  ipv6_server_get.py  ipv6_server_list.py  ipv6_server_status.py  ipv6_server_update.py  static_leases_ipv4_create.py  static_leases_ipv4_delete.py  static_leases_ipv4_get.py  static_leases_ipv4_list.py  static_leases_ipv4_update.py  static_leases_ipv6_create.py  static_leases_ipv6_delete.py  static_leases_ipv6_get.py  static_leases_ipv6_list.py  static_leases_ipv6_update.py
examples/firmware/: device_firmware_upgrade_start.py  device_firmware_upload.py  device_firmware_upload_delete.py  device_firmware_upload_verify.py  device_fota_start_download.py  device_fota_updatestatus.py  device_get_progress_status.py  device_get_status.py
examples/ip_routes/: ipv4_route_create.py  (+9 more)
tests/: conftest.py  mocks.py  test_backup.py  test_data_usage.py  test_dhcp_servers.py  test_dhcp_static_leases.py  test_firmware.py  test_ip_routes.py  test_login_validation.py  test_messages.py  test_tailscale.py  test_users.py  test_wireguard_actions.py  test_wireguard_config.py  test_wireguard_peers.py  test_wireless.py  test_zerotier.py  test_zerotier_networks.py
(+82 files in other folders)
