[project]
name = "ponika"
version = "0.5.0"
description = "Teltonika Device API Client"
readme = "README.md"
authors = [
    { name = "Ben Evans", email = "ben@bluechimp.io" },
    { name = "Stefan Warnat", email = "ich@stefanwarnat.de" },
]
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.12.5",
    "requests==2.32.3",
]

[project.scripts]
ponika = "ponika:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "responses==0.25.8",
    "ruff==0.15.1",
]

[tool.ruff.lint.per-file-ignores]
# E722 - Ignore bare except within tests
"**/{tests,docs,tools}/*" = ["E722"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
